# RAG-Pipe

./: .coverage  .coveragerc  .env.example  .gitignore  .importlinter  .pre-commit-config.yaml  Makefile  README.md  commit_message.txt  commit_message3.txt  docker-compose.yml  importlinter.ini  lint.cmd  mypy.ini  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
bu_superagent/application/: dtos.py  ports.py  scalable_ports.py
bu_superagent/application/dto/: ingest_dto.py  query_dto.py
bu_superagent/application/ports/: __init__.py  blob_store_port.py  classifier_port.py  clock_port.py  document_loader_port.py  embedding_port.py  llm_port.py  reranker_port.py  telemetry_port.py  vector_store_admin_port.py  vector_store_port.py  work_queue_port.py
bu_superagent/application/use_cases/: ingest_documents.py  ingest_documents_parallel.py  query_knowledge_base.py  query_knowledge_base_scalable.py
bu_superagent/config/: compose.py  composition.py  settings.py
bu_superagent/domain/: entities.py  errors.py  models.py  similarity.py  types.py  value_objects.py
bu_superagent/domain/services/: chunking.py  ranking.py  relevance_scoring.py  reranking.py
bu_superagent/infrastructure/blobstores/: minio_adapter.py
bu_superagent/infrastructure/embeddings/: e5_hf_adapter.py  hf_sentence_transformers.py  sentence_transformers_adapter.py
bu_superagent/infrastructure/llm/: __init__.py  vllm_openai_adapter.py  vllm_openai_client.py
bu_superagent/infrastructure/parsing/: pdf_text_extractor.py
bu_superagent/infrastructure/queues/: redis_streams_adapter.py
bu_superagent/infrastructure/reranking/: cross_encoder.py  cross_encoder_adapter.py
bu_superagent/infrastructure/telemetry/: otel_adapter.py
bu_superagent/infrastructure/time/: system_clock.py
bu_superagent/infrastructure/vectorstore/: chroma_vector_store.py  faiss_vector_store.py  qdrant_adapter.py  qdrant_vector_store.py
bu_superagent/interface/cli/: admin.py  ingest.py  main.py  query.py
bu_superagent/interface/http/: api.py
docs/: config-composition-root.md  dod-verification-report.md  scaling-implementation-summary.md  step-19-config-summary.md  testing-coverage-summary.md  testing-guide.md
docs/session-notes/: 2025-10-04-confidence-gate.md  2025-10-04-feat-infra-adapters.md
tests/application/: test_document_loader_port.py  test_ingest_use_case.py  test_ingest_use_case_v2.py  test_llm_port.py  test_query_dto.py  test_query_use_case.py  test_query_usecase_reranker.py  test_scalable_use_cases.py
tests/config/: test_clock_single_implementation.py  test_composition_helpers.py  test_vector_backend_switch.py
tests/domain/: test_chunking.py  test_errors.py  test_models.py  test_ranking.py  test_relevance_scoring.py  test_reranking.py  test_similarity.py
tests/infrastructure/: test_chroma_contract.py  test_hf_embedding_adapter.py  test_parsing_adapters.py  test_qdrant_adapter_contract.py  test_reranker_adapter_contract.py  test_vectorstore_adapters_fake.py
tests/interface/: test_cli_parsing.py
