[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bu_superagent"
version = "0.1.0"
description = "RAG-Pipe with clean 5-layer architecture"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.11.0",
  "ruff>=0.6.0",
]

[project.scripts]
bu-superagent = "bu_superagent.interface.cli.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
