[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bu_superagent"
version = "0.0.1"
description = "RAG-Pipe with clean 5-layer architecture"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5.0",
  "black>=24.8",
  "isort>=5.13",
  "mypy>=1.10",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "import-linter>=2.0",
]

[project.scripts]
bu-superagent = "bu_superagent.interface.cli.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=bu_superagent --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B"]
ignore = []
src = ["bu_superagent"]

[tool.isort]
profile = "black"
line_length = 100
