[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["bu_superagent*"]
exclude = ["tests*", "var*", "docs*"]

[project]
name = "bu_superagent"
version = "0.0.1"
description = "RAG-Pipe with clean 5-layer architecture"
requires-python = ">=3.11"
dependencies = [
  "click>=8.1.7",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  # RAG runtime deps (per 4.1)
  "qdrant-client>=1.9.0,<2.0.0",
  "chromadb>=0.5.5,<1.0.0",
  "faiss-cpu>=1.7.4.post2; platform_system != 'Windows' or platform_machine == 'x86_64'",
  "numpy>=1.26",
  "sentence-transformers>=3.0.1,<4.0.0",
  "transformers>=4.43.0,<5.0.0",
  "accelerate>=0.33.0,<1.0.0",
  "openai>=1.40.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "PyYAML>=6.0.1,<7.0.0",
  "pypdf>=4.3.1,<5.0.0",
  "unstructured>=0.14.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "ruff>=0.5.0",
  "black>=24.8",
  "isort>=5.13",
  "mypy>=1.10",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "import-linter>=2.0",
]

[project.scripts]
bu-superagent = "bu_superagent.interface.cli.main:main"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=bu_superagent --cov-report=term-missing --cov-fail-under=75"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["bu_superagent"]

[tool.ruff.lint]
select = ["E","F","UP","B"]
ignore = []

[tool.isort]
profile = "black"
line_length = 100
